@@ -1,3 +1,13 @@
+2014-10-20  Juri Linkov  <juri@jurta.org>
+
+	* vc/diff-mode.el (diff-refine-changed): Rename from
+	`diff-refine-change' for consistency with `diff-changed'.
+	(diff-refine-change): Add obsolete face alias.  (Bug#10181)
+
+	* vc/smerge-mode.el (smerge-refined-changed): Rename from
+	`smerge-refined-change'.
+	(smerge-refined-change): Add obsolete face alias.
+
 2014-09-05  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* subr.el (call-process-shell-command, process-file-shell-command):
